--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
       </p>
       <div class="catalog__content">
         <div class="catalog__left-part">
-          <div class="tab-content-item js-tab-content active" data-tab="2">
+          <div class="tab-content-item js-tab-content active" data-tab="2" id="tab-content-item">
             <picture>
               <source media="(min-width: 1600px)" srcset="/img/catalog-dominico.webp">
               <source media="(min-width: 1024px)" srcset="/img/catalog1024-dominico.webp">
@@ -566,7 +566,7 @@
               Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный Микеланджело в течение года овладевал профессиональными навыками. Автор фресковых циклов, в которых выпукло, со всевозможными подробностями показана домашняя жизнь библейских персонажей (в их роли выступают знатные граждане Флоренции в костюмах того времени).
             </p>
           </div>
-          <div class="tab-content-item js-tab-content" data-tab="1">
+          <div class="tab-content-item js-tab-content" data-tab="1" id="tab-content-item-2">
             <img src="/img/catalog-artist.png" alt="Художник">
             <h3 class="tab-content-title">
               Что мы о нем знаем?
@@ -593,124 +593,124 @@
           <div class="panel text" style="display:flex">
             <ul class="panel__list tab-header">
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Бенедетто ди Биндо
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Бергоньоне, Амброджо
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Биссоло, Франческо
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Больтраффио, Джованни
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Бонсиньори, Франческо
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Боттичини, Рафаэлло
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Брамантино
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Бреа, Людовико
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Бьяджо д’Антонио Туччи
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Веккьетта
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Андреа Верроккьо
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger active" data-tab="2">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item" data-scroll class="panel__list-btn text">
                   Доменико Гирландайо
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Беноццо Гоццоли
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Граначчи, Франческо
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Грегорио ди Чекко
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Джованни да Удине
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Джованни ди Паоло
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Джорджоне
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Парентино, Бернардо
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Пезеллино
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Пьетро Перуджино
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Перуцци, Бальдассаре
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Пизанелло
-                </button>
+                </a>
               </li>
               <li class="panel__list-item js-tab-trigger" data-tab="1">
-                <button class="panel__list-btn text">
+                <a href="#tab-content-item-2" data-scroll class="panel__list-btn text">
                   Пинтуриккьо
-                </button>
+                </a>
               </li>
             </ul>
           </div>
@@ -1245,6 +1245,7 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="/js/accordion.js"></script>
   <script src="/js/flowing-scroll.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
+  <script src="/js/scroll.js"></script>
 </body>
 </html>
