--- a/index.html
+++ b/index.html
@@ -1072,24 +1072,18 @@
       <p class="projects__text text">
         Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не уникальными данными до&nbsp;степени совершенной неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде всего, постоянное информационно-пропагандистское 
         <svg aria-label="Всплывающая подсказка" tabindex="0" class="tip" id="tip-1" height="16" width="16" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 16 16">
-          <path class="path" fill="#transparent" stroke="#9D5CD0" d="M15.5 8a7.5 7.5 0 1 1-15 0 7.5 7.5 0 0 1 15 0z"/>
-          <path fill="#000" d="M7.262 6.455h1.476V13H7.262V6.455zM8 4.903c-.287 0-.528-.092-.723-.274A.906.906 0 0 1 7 3.959c0-.264.092-.487.277-.67A.988.988 0 0 1 8 3c.287 0 .523.091.708.274.195.172.292.39.292.654a.949.949 0 0 1-.292.7.964.964 0 0 1-.708.275z"/>
-          <path fill="#fff" d="M10.911 4.493l1.045 1.044-6.75 6.75-1.044-1.045 6.75-6.75z"/>
-          <path fill="#fff" d="M11.794 11.081l-1.044 1.044L4 5.376l1.045-1.044 6.749 6.75z"/>
+          <path class="circle" fill="transparent" stroke="#9D5CD0" d="M15.5 8a7.5 7.5 0 1 1-15 0 7.5 7.5 0 0 1 15 0z"/>
+          <path class="letter" d="M7.26154 6.4551H8.73846V13H7.26154V6.4551ZM8 4.90259C7.71282 4.90259 7.4718 4.81126 7.27692 4.62861C7.09231 4.44597 7 4.22273 7 3.9589C7 3.69508 7.09231 3.47184 7.27692 3.28919C7.4718 3.0964 7.71282 3 8 3C8.28718 3 8.52308 3.09132 8.70769 3.27397C8.90256 3.44647 9 3.66464 9 3.92846C9 4.20243 8.90256 4.43582 8.70769 4.62861C8.52308 4.81126 8.28718 4.90259 8 4.90259Z" fill="black"/>
         </svg>
         обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений. И нет сомнений, что действия представителей оппозиции могут быть рассмотрены
         <svg aria-label="Всплывающая подсказка" tabindex="0" class="tip" id="tip-2" height="16" width="16" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 16 16">
-          <path fill="#transparent" stroke="#9D5CD0" d="M15.5 8a7.5 7.5 0 1 1-15 0 7.5 7.5 0 0 1 15 0z"/>
-          <path fill="#000" d="M7.262 6.455h1.476V13H7.262V6.455zM8 4.903c-.287 0-.528-.092-.723-.274A.906.906 0 0 1 7 3.959c0-.264.092-.487.277-.67A.988.988 0 0 1 8 3c.287 0 .523.091.708.274.195.172.292.39.292.654a.949.949 0 0 1-.292.7.964.964 0 0 1-.708.275z"/>
-          <path fill="#fff" d="M10.911 4.493l1.045 1.044-6.75 6.75-1.044-1.045 6.75-6.75z"/>
-          <path fill="#fff" d="M11.794 11.081l-1.044 1.044L4 5.376l1.045-1.044 6.749 6.75z"/>
+          <path class="circle" fill="transparent" stroke="#9D5CD0" d="M15.5 8a7.5 7.5 0 1 1-15 0 7.5 7.5 0 0 1 15 0z"/>
+          <path class="letter" d="M7.26154 6.4551H8.73846V13H7.26154V6.4551ZM8 4.90259C7.71282 4.90259 7.4718 4.81126 7.27692 4.62861C7.09231 4.44597 7 4.22273 7 3.9589C7 3.69508 7.09231 3.47184 7.27692 3.28919C7.4718 3.0964 7.71282 3 8 3C8.28718 3 8.52308 3.09132 8.70769 3.27397C8.90256 3.44647 9 3.66464 9 3.92846C9 4.20243 8.90256 4.43582 8.70769 4.62861C8.52308 4.81126 8.28718 4.90259 8 4.90259Z" fill="black"/>
         </svg>
         исключительно в&nbsp;разрезе маркетинговых и&nbsp;финансовых 
         <svg aria-label="Всплывающая подсказка" tabindex="0" class="tip" id="tip-3" height="16" width="16" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 16 16">
-          <path fill="#transparent" stroke="#9D5CD0" d="M15.5 8a7.5 7.5 0 1 1-15 0 7.5 7.5 0 0 1 15 0z"/>
-          <path fill="#000" d="M7.262 6.455h1.476V13H7.262V6.455zM8 4.903c-.287 0-.528-.092-.723-.274A.906.906 0 0 1 7 3.959c0-.264.092-.487.277-.67A.988.988 0 0 1 8 3c.287 0 .523.091.708.274.195.172.292.39.292.654a.949.949 0 0 1-.292.7.964.964 0 0 1-.708.275z"/>
-          <path fill="#fff" d="M10.911 4.493l1.045 1.044-6.75 6.75-1.044-1.045 6.75-6.75z"/>
-          <path fill="#fff" d="M11.794 11.081l-1.044 1.044L4 5.376l1.045-1.044 6.749 6.75z"/>
+          <path class="circle" fill="transparent" stroke="#9D5CD0" d="M15.5 8a7.5 7.5 0 1 1-15 0 7.5 7.5 0 0 1 15 0z"/>
+          <path class="letter" d="M7.26154 6.4551H8.73846V13H7.26154V6.4551ZM8 4.90259C7.71282 4.90259 7.4718 4.81126 7.27692 4.62861C7.09231 4.44597 7 4.22273 7 3.9589C7 3.69508 7.09231 3.47184 7.27692 3.28919C7.4718 3.0964 7.71282 3 8 3C8.28718 3 8.52308 3.09132 8.70769 3.27397C8.90256 3.44647 9 3.66464 9 3.92846C9 4.20243 8.90256 4.43582 8.70769 4.62861C8.52308 4.81126 8.28718 4.90259 8 4.90259Z" fill="black"/>
         </svg>
         предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных резервов призывают нас к новым свершениям, которые, в свою очередь, должны быть смешаны с&nbsp;не&nbsp;уникальными данными до степени совершенной неузнаваемости. Подробнее: 
         <a href="" class="projects__text-link link link-1" aria-label="Ссылка на другую страницу">
@@ -1120,15 +1114,33 @@
         </div>
         <div class="projects__swiper">
           <div class="swiper-wrapper projects__swiper-wrapper">
-            <div class="swiper-slide projects__swiper-slide slide-1"></div>
-            <div class="swiper-slide projects__swiper-slide slide-2"></div>
-            <div class="swiper-slide projects__swiper-slide slide-3"></div>
-            <div class="swiper-slide projects__swiper-slide slide-4"></div>
-            <div class="swiper-slide projects__swiper-slide slide-5"></div>
-            <div class="swiper-slide projects__swiper-slide slide-6"></div>
-            <div class="swiper-slide projects__swiper-slide slide-7"></div>
-            <div class="swiper-slide projects__swiper-slide slide-8"></div>
-            <div class="swiper-slide projects__swiper-slide slide-9"></div>
+            <a href="#" class="swiper-slide projects__swiper-slide slide-1" aria-label="Переход на страницу парнёра Freelands foundation">
+              <img src="/img/projects-slide-1.webp" alt="Логотип">  
+            </a>
+            <a href="#" class="swiper-slide projects__swiper-slide slide-2" aria-label="Переход на страницу парнёра Institute for contemporary art">
+              <img src="/img/projects-slide-2.webp" alt="Логотип">
+            </a>
+            <a href="#" class="swiper-slide projects__swiper-slide slide-3" aria-label="Переход на страницу парнёра Workhouse">
+              <img src="/img/projects-slide-3.webp" alt="Логотип">
+            </a>
+            <a href="#" class="swiper-slide projects__swiper-slide slide-4" aria-label="Переход на страницу парнёра 1849">
+              <img src="/img/projects-slide-4.webp" alt="Логотип">
+            </a>
+            <a href="#" class="swiper-slide projects__swiper-slide slide-5" aria-label="Переход на страницу парнёра Hiscox">
+              <img src="/img/projects-slide-5.webp" alt="Логотип">
+            </a>
+            <a href="#" class="swiper-slide projects__swiper-slide slide-6" aria-label="Переход на страницу парнёра Camden">
+              <img src="/img/projects-slide-6.webp" alt="Логотип">
+            </a>
+            <a href="#" class="swiper-slide projects__swiper-slide slide-7" aria-label="Переход на страницу парнёра Stassen">
+              <img src="/img/projects-slide-7.webp" alt="Логотип">
+            </a>
+            <a href="#" class="swiper-slide projects__swiper-slide slide-8" aria-label="Переход на страницу парнёра Watts gallery">
+              <img src="/img/projects-slide-8.webp" alt="Логотип">
+            </a>
+            <a href="#" class="swiper-slide projects__swiper-slide slide-9" aria-label="Переход на страницу парнёра eSad">
+              <img src="/img/projects-slide-9.webp" alt="Логотип">
+            </a>
           </div>
         </div>
       </div>
