--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
             <div class="gallery__select-heading">
               Фильтр:
             </div>
-            <select name="select" id="selectCustom" type="button">
-              <option value="Живопись" role="option" tabindex="0">Живопись</option>
-              <option value="Рисунок" role="option" tabindex="0">Рисунок</option>
-              <option value="Скульптура" role="option" tabindex="0">Скульптура</option>
+            <select name="select" id="selectCustom">
+              <option value="Живопись" tabindex="0">Живопись</option>
+              <option value="Рисунок" tabindex="0">Рисунок</option>
+              <option value="Скульптура" tabindex="0">Скульптура</option>
             </select>
           </div>
         </div>
@@ -413,7 +413,7 @@
           </button>
         </div>
         <div class="swiper-wrapper gallery__wrapper">
-          <div class="swiper-slide gallery__swiper-slide" tabindex="0" aria-label="Первый слайд">
+          <div class="swiper-slide gallery__swiper-slide" tabindex="0">
             <picture>
               <source media="(min-width: 1600px)" srcset="/img/gallery-painting-1.webp">
               <source media="(min-width: 1024px)" srcset="/img/gallery1024-painting-1.webp">
